ctrlcode/gimbalboard/gimbctrl/build/gimbctrl/unify_builder.log
[2022-07-25 12:27:49]	[done]
	build successfully !

[2022-07-25 12:27:52]	[done]
	build successfully !

[2022-07-25 12:40:45]	[done]
	build successfully !

[2022-07-25 12:55:51]	[done]
	build successfully !

[2022-07-25 13:08:12]	[done]
	build successfully !

[2022-07-25 13:10:22]	[done]
	build successfully !

[2022-07-25 13:11:30]	[done]
	build successfully !

[2022-07-25 13:14:10]	[done]
	build successfully !

[2022-07-25 13:15:23]	[done]
	build successfully !

[2022-07-25 13:18:34]	[done]
	build successfully !

[2022-07-25 13:44:03]	compilation failed at : "c:\MXI4\MXI4\ctrlcode\gimbalboard\gimbctrl\src\tasks\INS_task.c", exit code: 1
   at unify_builder.Program.Main(String[] args_)
---
./src/tasks/INS_task.c: In function 'INS_task':
./src/tasks/INS_task.c:241:91: error: expected expression before '{' token
         AHRS_update(INS_quat, timing_time, bmi088_real_data.gyro, bmi088_real_data.accel, {0.f,0.f,0.f});
                                                                                           ^

[2022-07-25 13:46:49]	compilation failed at : "c:\MXI4\MXI4\ctrlcode\gimbalboard\gimbctrl\src\tasks\INS_task.c", exit code: 1
   at unify_builder.Program.Main(String[] args_)
---
./src/tasks/INS_task.c: In function 'INS_task':
./src/tasks/INS_task.c:240:31: error: expected expression before '{' token
         ist8310_real_data.mag={0.f,0.f,0.f};
                               ^

[2022-07-25 13:48:50]	[done]
	build successfully !

[2022-07-25 13:50:52]	[done]
	build successfully !

